Removed Helm files. Updated tags to UAT.

--- a/samples/appdirector_v1beta1_clusterwideguvnor.yaml
+++ b/samples/appdirector_v1beta1_clusterwideguvnor.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   namespace: app-director
   guvnorCertsSecretName: guvnor-certs
-  guvnorImage: randoli/app-director:dev
+  guvnorImage: randoli/app-director:uat
   guvnorSecretName: guvnor-secret
