--- a/operator.yaml
+++ b/operator.yaml
@@ -571,7 +571,7 @@ spec:
         - --leader-elect
         command:
         - /manager
-        image: docker.io/randoli/app-director-operator:dev
+        image: docker.io/randoli/app-director-operator:uat
         livenessProbe:
           httpGet:
             path: /healthz
