Updated to 0.0.3 release

--- a/operator.yaml
+++ b/operator.yaml
@@ -746,7 +746,8 @@ spec:
         - --leader-elect
         command:
         - /manager
-        image: docker.io/randoli/app-director-operator:0.0.1
+        image: docker.io/randoli/app-director-operator:0.0.3
+        imagePullPolicy: Always
         livenessProbe:
           httpGet:
             path: /healthz
@@ -763,7 +764,7 @@ spec:
         resources:
           limits:
             cpu: 100m
-            memory: 30Mi
+            memory: 150Mi
           requests:
             cpu: 100m
             memory: 20Mi
