CU-2dzhjz4 Modified privileged permissions to nonroot.

--- a/operator.yaml
+++ b/operator.yaml
@@ -613,7 +613,7 @@ rules:
   - security.openshift.io
   resourceNames:
   - anyuid
-  - privileged
+  - nonroot
   resources:
   - securitycontextconstraints
   verbs:
