--- a/samples/appdirector_v1beta1_guvnor.yaml
+++ b/samples/appdirector_v1beta1_guvnor.yaml
@@ -1,8 +1,13 @@
 apiVersion: appdirector.randoli.ca/v1beta1
-kind: Guvnor
+kind: AppDirectorAgent
 metadata:
   name: guvnor
-  namespace: app-director-example-app
+  namespace: app-director
 spec:
-  guvnorCertsSecretName: guvnor-certs
-  guvnorSecretName: guvnor-secret
+  managedNamespaces: 
+  - example-app
+  agentCertsSecretName: guvnor-certs
+  agentConfigSecretName: guvnor-secret
+status:
+  conditions: []
+  managedNamespaceHistory: []
