Adding service monitor permission to the manager into the openshift operator

--- a/operator-openshift.yaml
+++ b/operator-openshift.yaml
@@ -544,6 +544,14 @@ rules:
   - delete
   - get
 - apiGroups:
+  - monitoring.coreos.com
+  resources:
+  - servicemonitors
+  verbs:
+  - create
+  - delete
+  - get
+- apiGroups:
   - policy
   resources:
   - poddisruptionbudgets
